# meter-viewer

./: .buildinfo  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alldata.db  config.toml  dev.txt  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  start.sh
.claude/: settings.local.json
.github/workflows/: gh-pages.yml
_modules/: index.html
_modules/meterviewer/: meterset.html
_sources/: index.rst.txt
_sources/api/: datasets_v1.rst.txt
_sources/developer/: index.rst.txt
_sources/general/: index.rst.txt
_sources/journals/: 2024_05_15.rst.txt  2024_10_23.rst.txt  2024_11_06.rst.txt  2025_09_26.rst.txt
_sources/pages/: index.rst.txt
_sources/views/: index.rst.txt
api/: dataset.html  datasets.html  datasets_v1.html  generator.html  img.html  index.html  meterset.html
developer/: index.html
docs/: conf.py  convert_md_to_rst.py  index.rst  label-migration-plan.md  mkdocs.yml
docs/api/: dataset.rst  datasets.rst  generator.rst  index.rst
docs/docs/: index.md
docs/examples/: index.rst
docs/general/: index.rst
docs/journals/: 2024_05_15.md  2024_05_17.md  2024_05_17.rst  index.rst
docs/pages/: HOME.md
docs/source/: index.rst
docs/usecases/: index.rst
docs/views/: meter_view.rst  overview.rst  quick.rst
examples/notebooks/: README.md  dis-estimate.ipynb  generate-op-v2.ipynb  generate-op.ipynb  merge-dataset.ipynb  meterdataset.ipynb  process.ipynb  readme.md  view-files.ipynb
general/: index.html
journals/: 2024_05_15.html  2024_05_17.html  2024_10_23.html  2024_11_06.html  2025_09_26.html  index.html
meterviewer/: files.py  rec.py
meterviewer/views/: views.py
notebooks/: 180816新数据.ipynb  dataset-gen copy.toml  generate-op-v2 copy.ipynb  generate-op-v2.ipynb  generate-op.ipynb  generate_op-v3.py  generated.ipynb  merge-dataset.ipynb  no-tilt.ipynb  normal-block.ipynb  normal-digit.ipynb  normal.ipynb  process.ipynb  quick-view-datasets.ipynb  read_resize_imgblock.py  readme.md  view-files.ipynb
notebooks/npy2file/: main.ipynb  readme.md
notebooks/process/: sep.ipynb
notebooks/view/: normal-block.ipynb  quick-view-datasets.ipynb  view-hrc.ipynb  view-luo.ipynb  view_generated.ipynb
pages/: index.html
playground/: cmd.py  readme.md
playground/forfastui/: readme.md
playground/generate_1/: __init__.py  gen.py  (+5 more)
requirements/: dev.txt  docs.txt
src/: config.toml  config.yml  dataset.toml
tests/: test_views.py
tools/: README.md  migrate_labels.py  migrate_labels_yaml.py  migrate_to_hdf5.py  quick_test_hdf5.py  test_hdf5_migration.py  test_migration.py  validate_labels.py  validate_labels_yaml.py
uncommon/: index.html
usecases/: index.html
views/: index.html  quick.html
(+147 files in other folders)
