[project]
name = "meterviewer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = [
    "notebook>=7.1.3",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.0",
]
