[project]
name = "meterviewer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = [
    "notebook>=7.1.3",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pillow>=10.3.0",
    "toml>=0.10.2",
    "opencv-python>=4.9.0.80",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
gui = [
    "nicegui>=1.4.25",
]
notebook = [
    "pandoc>=2.3",
    "nbconvert>=7.16.4",
]
[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.0",
    "-e file:///${PROJECT_ROOT}/#egg=meterviewer",
    "ruff>=0.4.4",
]

[tool.pdm.scripts]
notebook = 'pdm run jupyter-notebook .'
nicegui = 'pdm run python src/meterviewer/labeling/main.py'
